templates/service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  namespace: default
  labels:
    app: example
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  sessionAffinity: None
---
# Example LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: example-lb-service
  namespace: default
  labels:
    app: example
spec:
  type: LoadBalancer
  selector:
    app: example
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
# Example NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: example-nodeport-service
  namespace: default
  labels:
    app: example
spec:
  type: NodePort
  selector:
    app: example
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
